# portable-chromiuim-light

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: mini_app.cpp  mini_app.h
src/browser/: client_handler.cpp  client_handler.h  tab_manager.cpp  tab_manager.h
src/ui/: browser_window.cpp  browser_window.h
